--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "cmdk": "^1.0.0",
     "lucide-react": "^0.475.0",
     "next": "15.1.6",
+    "openai": "^4.85.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "tailwind-merge": "^3.0.1",
