--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "codemirror": "^6.0.1",
+    "cytoscape": "^3.31.1",
     "lucide-react": "^0.475.0",
     "next": "15.1.6",
     "openai": "^4.85.4",
