--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@codemirror/view": "^6.36.3",
     "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-slot": "^1.1.2",
+    "@tauri-apps/plugin-opener": "^2.2.6",
     "@tauri-apps/plugin-sql": "^2.2.0",
     "@visx/network": "^3.12.0",
     "@visx/text": "^3.12.0",
