--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-select": "^2.1.6",
     "@radix-ui/react-slot": "^1.1.2",
+    "@tauri-apps/plugin-opener": "^2.2.6",
     "@tauri-apps/plugin-sql": "^2.2.0",
     "@visx/network": "^3.12.0",
     "@visx/text": "^3.12.0",
