--- a/package.json
+++ b/package.json
@@ -1,67 +1,29 @@
 {
   "name": "noteferatu",
-  "version": "0.1.0",
-  "type": "module",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "tauri": "tauri",
-    "test": "vitest run"
+    "tauri": "tauri"
   },
   "dependencies": {
-    "@codemirror/commands": "^6.8.0",
-    "@codemirror/lang-javascript": "^6.2.3",
-    "@codemirror/lang-markdown": "^6.3.2",
-    "@codemirror/state": "^6.5.2",
-    "@codemirror/view": "^6.36.3",
-    "@radix-ui/react-dialog": "^1.1.6",
-    "@radix-ui/react-popover": "^1.1.6",
-    "@radix-ui/react-select": "^2.1.6",
-    "@radix-ui/react-slot": "^1.1.2",
-    "@tauri-apps/plugin-opener": "^2.2.6",
-    "@tauri-apps/plugin-sql": "^2.2.0",
-    "@testing-library/dom": "^10.4.0",
-    "@visx/network": "^3.12.0",
-    "@visx/text": "^3.12.0",
-    "@vitejs/plugin-react": "^4.3.4",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
-    "cmdk": "^1.0.0",
-    "codemirror": "^6.0.1",
-    "cytoscape": "^3.31.1",
-    "lucide-react": "^0.475.0",
-    "next": "15.1.6",
-    "next-themes": "^0.4.6",
-    "openai": "^4.85.4",
+    "@tauri-apps/api": "^2.5.0",
+    "next": "15.3.3",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "sonner": "^2.0.1",
-    "tailwind-merge": "^3.0.1",
-    "tailwindcss-animate": "^1.0.7"
+    "react-dom": "^19.0.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@tauri-apps/api": "^2.2.0",
-    "@testing-library/jest-dom": "^6.6.3",
-    "@testing-library/react": "^16.3.0",
-    "@types/next": "^9.0.0",
+    "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@vitest/ui": "^3.1.1",
     "eslint": "^9",
-    "eslint-config-next": "15.1.6",
-    "jsdom": "^26.0.0",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "ts-node": "^10.9.2",
-    "typescript": "^5",
-    "vitest": "^3.1.1"
-  },
-  "resolutions": {
-    "@codemirror/state": "^6.2.0"
+    "eslint-config-next": "15.3.3",
+    "tailwindcss": "^4",
+    "typescript": "^5"
   }
 }
