--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,10 +1,10 @@
 [package]
-name = "NoteFeratu"
+name = "app"
 version = "0.1.0"
-description = "NoteFeratu is a plain-text personal knowledge management system"
-authors = ["Michail Zeipekki", "Daniel Wildsmith", "Mathew Alangadan", "Grayson Kornberg", "Anton Salvador"]
-license = "GPL-3.0-or-later"
-repository = "https://github.com/zeim839/Noteferatu"
+description = "A Tauri App"
+authors = ["you"]
+license = ""
+repository = ""
 edition = "2021"
 rust-version = "1.77.2"
 
@@ -21,7 +21,5 @@ tauri-build = { version = "2.0.4", features = [] }
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 log = "0.4"
-tauri = { version = "2.2.4", features = ["macos-private-api"] }
+tauri = { version = "2.2.4", features = [] }
 tauri-plugin-log = "2.0.0-rc"
-tauri-plugin-sql = { version = "2", features = ["sqlite"] }
-tauri-plugin-opener = "2"
