feat: macwindow tauri plugin

--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,14 +1,17 @@
 [package]
-name = "app"
-version = "0.1.0"
-description = "A Tauri App"
-authors = ["you"]
-license = ""
+name = "NoteFeratu"
+version = "1.0.0"
+description = "NoteFeratu!"
+authors = ["Michael Zeipekkis"]
+license = "GPL-3.0"
 repository = ""
 edition = "2021"
 rust-version = "1.77.2"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+
+[profile.release]
+strip = true # Automaticaly strip symbols from the binary.
 
 [lib]
 name = "app_lib"
@@ -23,3 +26,4 @@ serde = { version = "1.0", features = ["derive"] }
 log = "0.4"
 tauri = { version = "2.2.4", features = [] }
 tauri-plugin-log = "2.0.0-rc"
+macwindow = { path = "plugins/macwindow" }
