--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -12,6 +12,10 @@ rust-version = "1.77.2"
 
 [profile.release]
 strip = true # Automaticaly strip symbols from the binary.
+opt-level = "z" # Optimize for size.
+lto = true # Link-time optimization.
+codegen-units = 1 # Reduce parallel code generation for better optimization.
+panic = "abort" # Abort on panic.
 
 [lib]
 name = "app_lib"
