--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -8,15 +8,6 @@ repository = ""
 edition = "2021"
 rust-version = "1.77.2"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
-[profile.release]
-strip = true # Automaticaly strip symbols from the binary.
-opt-level = "z" # Optimize for size.
-lto = true # Link-time optimization.
-codegen-units = 1 # Reduce parallel code generation for better optimization.
-panic = "abort" # Abort on panic.
-
 [lib]
 name = "app_lib"
 crate-type = ["staticlib", "cdylib", "rlib"]
@@ -30,4 +21,4 @@ serde = { version = "1.0", features = ["derive"] }
 log = "0.4"
 tauri = { version = "2.2.4", features = [] }
 tauri-plugin-log = "2.0.0-rc"
-macwindow = { path = "plugins/macwindow" }
+macwindow = { path = "../crates/macwindow" }
