--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -21,4 +21,6 @@ serde = { version = "1.0", features = ["derive"] }
 log = "0.4"
 tauri = { version = "2.2.4", features = [] }
 tauri-plugin-log = "2.0.0-rc"
-macwindow = { path = "../crates/macwindow" }
+macwindow = { path = "../crates/plugins/macwindow" }
+plugin-agent = { path = "../crates/plugins/agent" }
+tauri-plugin-opener = "2"
