--- a/crates/plugins/agent/permissions/default.toml
+++ b/crates/plugins/agent/permissions/default.toml
@@ -1,3 +1,3 @@
 [default]
 description = "Default permissions for the plugin"
-permissions = ["allow-try-connect"]
+permissions = ["allow-try-connect", "allow-list-models"]
