feat: integrate helsync with tauri plugin

--- a/crates/helsync/.gitignore
+++ b/crates/helsync/.gitignore
@@ -1,3 +1,17 @@
+/.vs
+.DS_Store
+.Thumbs.db
+*.sublime*
+.idea/
+debug.log
+package-lock.json
+.vscode/settings.json
+yarn.lock
+
+/.tauri
 /target
-.env
-*.long-type-*.txt
+Cargo.lock
+node_modules/
+
+dist-js
+dist
