feat: implement create_file, write_to_file

--- a/crates/helsync/permissions/default.toml
+++ b/crates/helsync/permissions/default.toml
@@ -6,5 +6,6 @@ permissions = [
     "allow-move-file",
     "allow-remove-file",
     "allow-create-folder",
+    "allow-create-file",
     "allow-list-files"
 ]
