--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -21,7 +21,7 @@ serde = { version = "1.0", features = ["derive"] }
 log = "0.4"
 tauri = { version = "2.2.4", features = [] }
 tauri-plugin-log = "2.0.0-rc"
-macwindow = { path = "../crates/macwindow" }
-plugin-agent = { path = "../crates/plugins/agent" }
 tauri-plugin-opener = "2"
+macwindow = { path = "../crates/macwindow" }
+agent = { path = "../crates/agent", features = ["plugin"] }
 helsync = { path = "../crates/helsync", features = ["plugin"] }
