feat: implement explorer tags

--- a/crates/helsync/permissions/default.toml
+++ b/crates/helsync/permissions/default.toml
@@ -10,5 +10,9 @@ permissions = [
     "allow-list-files",
     "allow-list-bookmarks",
     "allow-create-bookmark",
-    "allow-remove-bookmark"
+    "allow-remove-bookmark",
+    "allow-list-tags",
+    "allow-create-tag",
+    "allow-create-tag-bind",
+    "allow-remove-tag-bind"
 ]
