--- a/crates/agent/Cargo.toml
+++ b/crates/agent/Cargo.toml
@@ -5,12 +5,13 @@ authors = [ "NoteFeratu" ]
 description = ""
 edition = "2021"
 rust-version = "1.77.2"
-exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]
 links = "agent"
 
 [dependencies]
 tauri = { version = "2.2.4", optional = true }
 thiserror = { version = "2", optional = true }
+sqlx = { version = "0.8.6", features = ["macros", "runtime-tokio", "sqlite"], optional = true }
+database = { path = "../database", optional = true }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = { version = "1.0.140", features = ["preserve_order"] }
 tokio = { version = "1.45.1", features = ["full"] }
@@ -25,5 +26,6 @@ tauri-plugin = { version = "2.0.3", features = ["build"], optional = true }
 dotenv = "0.15.0"
 
 [features]
-default = [ "plugin" ]
-plugin = ["dep:tauri", "dep:thiserror", "dep:tauri-plugin"]
+default = ["plugin"]
+plugin = ["dep:tauri", "dep:thiserror", "dep:tauri-plugin", "conversation"]
+conversation = ["dep:sqlx", "dep:database"]
