--- a/crates/agent/permissions/default.toml
+++ b/crates/agent/permissions/default.toml
@@ -1,3 +1,10 @@
 [default]
 description = "Default permissions for the plugin"
-permissions = ["allow-try-connect", "allow-list-models"]
+permissions = [
+    "allow-try-connect",
+    "allow-list-models",
+    "allow-list-conversations",
+    "allow-create-conversation",
+    "allow-rename-conversation",
+    "allow-remove-conversation"
+]
