feat: chat completion streaming

--- a/crates/agent/permissions/default.toml
+++ b/crates/agent/permissions/default.toml
@@ -6,5 +6,7 @@ permissions = [
     "allow-list-conversations",
     "allow-create-conversation",
     "allow-rename-conversation",
-    "allow-remove-conversation"
+    "allow-remove-conversation",
+    "allow-send-message",
+    "allow-send-stream-message"
 ]
