feat: list conversation messages

--- a/crates/agent/permissions/default.toml
+++ b/crates/agent/permissions/default.toml
@@ -8,5 +8,6 @@ permissions = [
     "allow-rename-conversation",
     "allow-remove-conversation",
     "allow-send-message",
-    "allow-send-stream-message"
+    "allow-send-stream-message",
+    "allow-list-messages"
 ]
