--- a/crates/agent/permissions/default.toml
+++ b/crates/agent/permissions/default.toml
@@ -9,6 +9,7 @@ permissions = [
     "allow-remove-conversation",
     "allow-send-message",
     "allow-send-stream-message",
+    "allow-update-message",
     "allow-list-messages",
     "allow-stop-messages"
 ]
