--- a/crates/helsync/Cargo.toml
+++ b/crates/helsync/Cargo.toml
@@ -9,7 +9,6 @@ links = "helsync"
 
 [dependencies]
 tauri = { version = "2.2.4", optional = true }
-thiserror = { version = "2", optional = true }
 clap = { version = "4.5.40", features = ["derive"], optional = true }
 console = { version = "0.16.0", optional = true }
 dirs = { version = "6.0.0", optional = true }
@@ -18,6 +17,7 @@ serde = { version = "1.0", features = ["derive"] }
 sqlx = { version = "0.8.6", features = ["macros", "runtime-tokio", "sqlite"] }
 tokio = { version = "1.45.1", features = ["full"] }
 reqwest = { version = "0.12.20", features = ["json"] }
+thiserror = "2"
 form_urlencoded = "1.2.1"
 serde_json = "1.0.140"
 rand = "0.9.2"
@@ -34,7 +34,7 @@ dotenv = "0.15.0"
 
 [features]
 binary = ["dep:clap", "dep:console", "dep:dirs", "dep:anyhow"]
-plugin = ["dep:tauri", "dep:thiserror", "dep:tauri-plugin"]
+plugin = ["dep:tauri", "dep:tauri-plugin"]
 
 [[bin]]
 name = "helsync"
