--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "simple-icons": "^15.6.0",
-    "tailwind-merge": "^3.3.1"
+    "tailwind-merge": "^3.3.1",
+    "vis-data": "^8.0.1",
+    "vis-network": "^10.0.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
