--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@codemirror/commands": "^6.8.1",
     "@codemirror/view": "^6.38.2",
+    "@lezer/markdown": "^1.4.3",
     "@radix-ui/react-accordion": "^1.2.11",
     "@radix-ui/react-context-menu": "^2.2.15",
     "@radix-ui/react-dialog": "^1.1.14",
